--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install  flake8 matplotlib pytest requests
+          pip install  flake8 matplotlib pytest haversine requests
 
       # - name: Lint with flake8
       #   run: flake8 --statistics *.py
